--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Viviana Anahí Cáceres Barbosa"
+title                    : "Viviana A. Cáceres"
 title_separator          : "-"
 name                     : &name "Viviana Anahí Cáceres Barbosa"
 description              : &description "personal description"
@@ -23,7 +23,7 @@ repository               : "viviana-caceres/viviana-caceres.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Viviana Anahí Cáceres Barbosa"
   pronouns         : "she/her"  
   bio              : "Second-year Physics graduate student interested in gravitational wave astrophysics."
   location         : "State College, PA"
@@ -101,7 +101,7 @@ comments:
   facebook:
     appid                :
     num_posts            : # 5 (default)
-    colorscheme          : # "light" (default), "dark"
+    colorscheme          : "light"
 staticman:
   allowedFields          : ['name', 'email', 'url', 'message']
   branch                 : "gh-pages" # "master", "gh-pages"
