try to fix header overlapping with profile picture

--- a/_config.yml
+++ b/_config.yml
@@ -290,6 +290,9 @@ sass:
   sass_dir: _sass
   style: compressed # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
 
+# Custom stylesheets to include after the theme CSS
+head_custom: 
+  - /assets/css/custom.css
 
 # Outputting
 permalink: /:categories/:title/
