--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "viviana-caceres/viviana-caceres.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "beach_headshot.JPG"
   name             : "Viviana Anahí Cáceres Barbosa"
   pronouns         : "she/her"  
   bio              : "Second-year Physics graduate student interested in gravitational wave astrophysics."
